# name: TestCheckNuvsBlast.test_bad_zip_file
  <class 'dict'> {
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': 'Unable to interpret NCBI result',
    'id': 4,
    'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
    'ready': False,
    'result': None,
    'rid': None,
    'task': None,
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestCheckNuvsBlast.test_result
  <class 'dict'> {
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'id': 4,
    'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
    'ready': True,
    'result': <class 'dict'> {
      'hits': <class 'list'> [
      ],
      'masking': None,
      'params': <class 'list'> [
      ],
      'program': 'blast',
      'stat': 'stat',
      'target': <class 'dict'> {
        'name': 'foo',
        'sequence': 'ATAGAQGAGATAGAG',
      },
      'version': '1.2.3',
    },
    'rid': 'RID_12345',
    'task': None,
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestCheckNuvsBlast.test_running[after]
  <class 'dict'> {
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'id': 4,
    'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
    'ready': False,
    'result': None,
    'rid': 'RID_12345',
    'task': None,
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestCheckNuvsBlast.test_running[before]
  <class 'dict'> {
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'error': None,
    'id': 4,
    'last_checked_at': datetime.datetime(2013, 5, 7, 4, 24, 24),
    'ready': False,
    'result': None,
    'rid': 'RID_12345',
    'task': None,
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: test_create_nuvs_blast
  <SQLNuVsBlast(id=1, analysis_id=analysis, sequence_index=21, created_at=2015-10-06 20:00:00, updated_at=2015-10-06 20:00:00, last_checked_at=2015-10-06 20:00:00, error=None, interval=3, rid=None, ready=False, result=None, task_id=1)>
---
# name: test_list_by_analysis
  <class 'list'> [
    <class 'dict'> {
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'id': 2,
      'interval': 3,
      'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
      'ready': False,
      'result': None,
      'rid': None,
      'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    },
    <class 'dict'> {
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'id': 3,
      'interval': 3,
      'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
      'ready': False,
      'result': None,
      'rid': None,
      'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    },
  ]
---
